--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ PS.forEach(
 
   
 var adresses_NQPV = inside(adresses_turf,layer_adresses_NQPV);
+console.log(adresses_NQPV);
 
 for (let i=0 ; i < adresses_NQPV.features.length; i++)
 {
