--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ coords[1] = adresses_NQPV.features[i].geometry.coordinates[0];
 L.circleMarker(coords, {radius: 2, color : 'black'}).addTo(map_1);
 };
 
-adresses_turf = adresses_turf.filter(element => turf.inside(element,Layer_NQPV)==0);
+adresses_turf = adresses_turf.filter(element => turf.booleanPointInPolygon(element,Layer_NQPV.toGeoJSON())==0);
 	 
 console.log(adresses_turf.length);
 
