--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@ coords[1] = adresses_NQPV.features[i].geometry.coordinates[0];
 L.circleMarker(coords, {radius: 2, color : 'black'}).addTo(map_1);
 };
 
-// adresses_turf = adresses_turf.filter(element => turf.booleanPointInPolygon(element,Layer_NQPV.toGeoJSON())==0);
+adresses_turf = adresses_turf.filter(element => turf.booleanPointInPolygon(turf.point(element),Layer_NQPV.toGeoJSON())==0);
 
-turf.booleanPointInPolygon(turf.point(adresses_turf[0]),Layer_NQPV.toGeoJSON())
 
 console.log(adresses_turf.length);
 
