--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@ L.circleMarker(coords, {radius: 2, color : 'black'}).addTo(map_1);
 };
 
 // adresses_turf = adresses_turf.filter(element => turf.booleanPointInPolygon(turf.point(element),Layer_NQPV.toGeoJSON())==0);
-console.log(turf.pointsWithinPolygon(turf.point(adresses_turf[0]),Layer_NQPV.toGeoJSON()).features.length);
+adresses_turf.forEach(function(element)
+{
+if(console.log(turf.pointsWithinPolygon(turf.point(element),Layer_NQPV.toGeoJSON()).features.length)>0)
+{adresses_turf.splice(adresses_turf.indexOf(element),1);}
+});
 
 console.log(adresses_turf.length);
 
