--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 
  document.getElementById("comment_1").innerHTML = adresses_NQPV.features.length +
 	 ' adresses relèvent d\'un quartier NQPV (en noir).' + ' ' +
-	 adresses_NQPV.features.length +
+	 adresses_QVA.features.length +
 	 ' adresses relèvent d\'un quartier QVA (en jaune).' + ' '
-	 adresses_NQPV.features.length +
+	 adresses_AQV.features.length +
 	 ' adresses relèvent d\'un quartier AQV (en violet).' + ' '+ (adresses_turf.length - adresses_NQPV.features.length
-	- - adresses_QVA.features.length - adresses_AQV.features.length) + ' n\'en relèvent pas (en bleu).'
+	- adresses_QVA.features.length - adresses_AQV.features.length) + ' n\'en relèvent pas (en bleu).'
 
 
  }
