--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
 // case 'QVA': return {color: "yellow","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
 //            default:   return {color: "purple","weight": 2.0, "opacity" : 0.7, "fillopacity" : 0.7};
   
- Layer_adresses.addTo(map_1); 
  Layer_NQPV.addTo(map_1);
  Layer_QVA.addTo(map_1);
  Layer_AQV.addTo(map_1);
@@ -138,7 +137,7 @@ function inside(points,zone)
 // on génère dans un premier temps tous les marqueurs qu'on recouvrera ensuite selon les zones le cas échéant
 PS.forEach(function(element){
     element.forEach(function(latlng) {
-        L.circleMarker(latlng, {radius: 2, color : color[PS.indexOf(element)]}).addTo(map_1);
+        L.circleMarker(latlng, {radius: 2, color : 'blue'}).addTo(map_1);
     });
    // var markers_adresses = {'markers': layer_adresses};
    // L.control.layers(null, markers_adresses).addTo(map_1);
