--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 	 adresses_QVA.features.length +
 	 ' adresses relèvent d\'un quartier QVA (en jaune).' + ' '
 	 adresses_AQV.features.length +
-	 ' adresses relèvent d\'un quartier AQV (en violet).' + ' '+ (adresses_turf.length - adresses_NQPV.features.length
-	- adresses_QVA.features.length - adresses_AQV.features.length) + ' n\'en relèvent pas (en bleu).'
+	 ' adresses relèvent d\'un quartier AQV (en violet).' + ' '+ adresses_turf.length - adresses_NQPV.features.length
+	- adresses_QVA.features.length - adresses_AQV.features.length + ' n\'en relèvent pas (en bleu).'
 
 
  }
