--- a/index.html
+++ b/index.html
@@ -168,16 +168,13 @@ coords[1] = adresses_AQV.features[i].geometry.coordinates[0];
 L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
 };
 
-
-
-
  document.getElementById("comment_1").innerHTML = adresses_NQPV.features.length +
 	 ' adresses relèvent d\'un quartier NQPV (en noir).' + ' ' +
 	 adresses_QVA.features.length +
-	 ' adresses relèvent d\'un quartier QVA (en jaune).' + ' '
+	 ' adresses relèvent d\'un quartier QVA (en jaune).' + ' ' +
 	 adresses_AQV.features.length +
-	 ' adresses relèvent d\'un quartier AQV (en violet).' + ' '+ adresses_turf.length - adresses_NQPV.features.length
-	- adresses_QVA.features.length - adresses_AQV.features.length + ' n\'en relèvent pas (en bleu).'
+	 ' adresses relèvent d\'un quartier AQV (en violet).' + ' '+ (adresses_turf.length - adresses_NQPV.features.length
+	- adresses_QVA.features.length - adresses_AQV.features.length) + ' n\'en relèvent pas (en bleu).'
 
 
  }
