--- a/index.html
+++ b/index.html
@@ -342,9 +342,8 @@ function unify(polyList) {
     PS.forEach(
     function(element) {
 	if ( element.nom_centre_social != 'La 20eme Chaise') {
-        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).bindPopup('Centre social' + '<br/>' + element.nom_centre_social,{permanent: false, opacity: 0.2, fillcolor : 'yellow'}).addTo(map_3));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).bindTooltip('Centre social' + '<br/>' + element.nom_centre_social,{permanent: true, opacity: 0.2, fillcolor : 'yellow'}).addTo(map_3));
 	}
- //       layer_cercles_CS.addLayer(L.circle([element.lat, element.lng], {radius: 400, weight : 2.0, color : 'yellow', fill : false}).bindTooltip('Centre social' + '<br/>' + element.nom_centre_social,{permanent: false, opacity: 0.8, fillcolor : 'yellow'}).addTo(map_3));
     });
 	 
 layer_adresses_CS.eachLayer(function(layer) {
