--- a/index.html
+++ b/index.html
@@ -311,10 +311,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     var markers_adresses = {'markers': layer_adresses};
    // L.control.layers(null, markers_adresses).addTo(map_3);
 
- var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
-    return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
- }, {permanent: false, opacity: 0.8}  //then add your options
-).addTo(map_3);
+ 
     
    
    var PS = centres_sociaux;
@@ -342,7 +339,7 @@ function unify(polyList) {
     PS.forEach(
     function(element) {
 	if ( element.nom_centre_social != 'La 20eme Chaise') {
-        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).bindTooltip('Centre social' + '<br/>' + element.nom_centre_social,{permanent: true, opacity: 0.5, fillcolor : 'yellow'}).addTo(map_3));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).bindTooltip(element.nom_centre_social,{permanent: true, opacity: 0.5, fillcolor : 'yellow'}).addTo(map_3));
 	}
     });
 	 
@@ -376,6 +373,11 @@ coords[0] = inside.features[i].geometry.coordinates[1];
 coords[1] = inside.features[i].geometry.coordinates[0];	
 L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_3);
 };
+
+var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
+    return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
+ }, {permanent: false, opacity: 0.8}  //then add your options
+).addTo(map_3);
 
 
    
