--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ for (let i=0 ; i < inside.features.length; i++)
 var coords = [];
 coords[0] = inside.features[i].geometry.coordinates[1];
 coords[1] = inside.features[i].geometry.coordinates[0];	
-L.circleMarker(coords, {radius: 2, color : 'red'}).addTo(map_3);
+L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 };
 
 var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
@@ -381,7 +381,7 @@ var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opa
 
  document.getElementById("comment_3").innerHTML = inside.features.length +
 	 ' sont dans une zone d\'influence d\'un autre centre social (en noir).' + '<br/>' +
-	 (layer_adresses.getLayers().length -inside.features.length) + 'n\'y sont pas.'
+	 (layer_adresses.getLayers().length -inside.features.length) + ' n\'y sont pas.'
    
   
     // var markers_adresses_CS = {'markers': layer_adresses_CS};
