--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ var geojsonLayer = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opa
 ).addTo(map_3);
 
  document.getElementById("comment_3").innerHTML = inside.features.length +
-	 ' sont dans une zone d\'influence d\'un autre centre social (en noir).' + '<br/>' +
+	 ' sont dans une zone d\'influence d\'un autre centre social (en violet).' + '<br/>' +
 	 (layer_adresses.getLayers().length -inside.features.length) + ' n\'y sont pas.'
    
   
