--- a/index.html
+++ b/index.html
@@ -380,11 +380,16 @@ var Layer_IRIS = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opaci
 ).addTo(map_3);
 
 
-var picnic_parks = L.geoJson(myJson, {filter: picnicFilter}).addTo(map);
+var Layer_ZI_20C = = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
+    return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
+ }, {permanent: false, opacity: 0.8}  //then add your options
+).addTo(map_3);
 
 function Filtre_influence_20C(feature) {
-  if (feature.properties.Picnic === "Yes") return true
+  if (feature.properties.C_IR=== 751207911) return true
 }
+
+console.log(Layer_ZI_20C);
 
  document.getElementById("comment_3").innerHTML = inside.features.length +
 	 ' sont dans une zone d\'influence d\'un autre centre social (en violet).' + '<br/>' +
