--- a/index.html
+++ b/index.html
@@ -380,13 +380,10 @@ var Layer_IRIS = L.geoJson(iris, { style:  {color: "black","weight": 1.5, "opaci
 ).addTo(map_3);
 
 
-var Layer_ZI_20C = = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).bindTooltip(function (layer) {
-    return 'IRIS' + '<br/>' + layer.feature.properties.C_IR + ' : ' + layer.feature.properties.L_IR; //merely sets the tooltip text
- }, {permanent: false, opacity: 0.8}  //then add your options
-).addTo(map_3);
+var Layer_ZI_20C = = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: "black","weight": 1.5, "opacity" : 0.7, "fill" : true, "fillcolor" : 'white', "fillopacity" : 0.0}}).addTo(map_3);
 
 function Filtre_influence_20C(feature) {
-  if (feature.properties.C_IR=== 751207911) return true
+  if (feature.properties.C_IR === 751207911) return true
 }
 
 console.log(Layer_ZI_20C);
