--- a/index.html
+++ b/index.html
@@ -343,10 +343,11 @@ function Filtre_influence_20C(feature) {
     PS.forEach(
     function(element) {
 	if ( element.nom_centre_social != 'La 20eme Chaise') {
-        layer_adresses_CS.addLayer(turf.difference(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).toGeoJSON(),Layer_ZI_20C.toGeoJSON()).bindTooltip(element.nom_centre_social,{permanent: true, opacity: 0.5, fillcolor : 'yellow'}).addTo(map_3));
+        layer_adresses_CS.addLayer(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'})).bindTooltip(element.nom_centre_social,{permanent: true, opacity: 0.5, fillcolor : 'yellow'}).addTo(map_3));
 	}
     });
 
+console.log(turf.difference(L.circleMarker([element.lat, element.lng], {radius: 3, color : 'purple'}).toGeoJSON(),Layer_ZI_20C.toGeoJSON()));
 // on crée le layer des cercles d'influence des autres CS
 layer_adresses_CS.eachLayer(function(layer) {
   LGeo.circle(layer.getLatLng(), radius, opts).addTo(layer_cercles_CS);
