--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange').addTo(map_3);
 
 console.log(ZI_20C);
 	 
-for (let i=0; i < layer_cercles_CS.getLayers().length.length; i++)
+for (let i=0; i < layer_cercles_CS.getLayers().length; i++)
 	 {(function(element) {var poly =turf.difference( element.toGeoJSON(),ZI_20C ) ;
 			     console.log(poly);})};
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
