--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange').addTo(map_3);
 console.log(ZI_20C);
 	 
 layer_cercles_CS.eachLayer(function(layer)
-	 {console.log(layer);
+	 {console.log(layer._latlngs);
 	  // var poly =turf.difference( layer._latlng.toGeoJSON(),ZI_20C.toGeoJSON() ) ;
 	  // console.log(poly);
 	 });
