--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ console.log(ZI_20C);
 	 
 layer_cercles_CS.eachLayer(function(layer)
 	 { // console.log(layer._latlngs);
-	   var poly = turf.difference( layer._latlngs.toGeoJSON(),ZI_20C ) ;
+	   var poly = turf.difference( turf.polygon(layer._latlngs).toGeoJSON(),ZI_20C.toGeoJSON() ) ;
 	   console.log(poly);
 	 });
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
