--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@ console.log(ZI_20C);
 	 
 // layer_cercles_CS.eachLayer(function(layer)
 	 { // console.log(layer._latlngs);
-	   var poly = turf.difference(layer.getLayers().toGeoJSON(),ZI_20C.toGeoJSON() ) ;
+	   var poly = turf.difference(layer_cercles_CS.getLayers().toGeoJSON(),ZI_20C.toGeoJSON() ) ;
 	   console.log(poly);
-	 });
+	 // });
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
 
