--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ var poly = turf.difference( layer_cercles_CS.getLayers(),ZI_20C.toGeoJSON() ) ;
 console.log(poly);
 		 
 var circleUnion = unify(layer_cercles_CS.getLayers(),'purple').addTo(map_3);
-
+console.log(circleUnion);
 // on recherche les adresses dans la zone globale circleUnion
 	 
 var points_turf = [];
