--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ function Filtre_influence_20C(feature) {
 // on crée le layer des cercles d'influence des autres CS
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
-  console.log(Test);
+  console.log(Test.toGeoJSON());
   Test.addTo(layer_cercles_CS);
 });
 
