--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange').addTo(map_3);
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
   console.log(Test.toGeoJSON());
-  var poly = turf.difference(Test.toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
-  console.log(poly);  
+  // var poly = turf.difference(Test.toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
+  // console.log(poly);  
   Test.addTo(layer_cercles_CS);
 });
 
@@ -375,10 +375,10 @@ console.log(ZI_20C);
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
 var circleUnion = unify(layer_cercles_CS.getLayers(),'purple').addTo(map_3);
-console.log(circleUnion);
+console.log(circleUnion.toGeoJSON());
 	 
-var poly = turf.difference(layer_cercles_CS[0].toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
-console.log(poly);
+//var poly = turf.difference(layer_cercles_CS[0].toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
+// console.log(poly);
 		 
 
 // on recherche les adresses dans la zone globale circleUnion
