--- a/index.html
+++ b/index.html
@@ -355,9 +355,8 @@ layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
   console.log(Test.toGeoJSON());
   console.log(turf.polygon(Test.toGeoJSON().geometry.coordinates));
-  console.log(Test.toGeoJSON());
-  // var poly = turf.difference(Test.toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
-  // console.log(poly);  
+  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),ZI_20C.toGeoJSON()).addTo(map_3) ;
+  console.log(poly);  
   Test.addTo(layer_cercles_CS);
 });
 
