--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@ function Filtre_influence_20C(feature) {
   if ((feature.properties.C_IR >= 751207906 && feature.properties.C_IR <= 751207910)) return true
 }
 var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange').addTo(map_3);
+console.log(ZI_20C);
 	 
     PS.forEach(
     function(element) {
