--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ function Filtre_influence_20C(feature) {
 }
 var ZI_20C = unify(Layer_ZI_20C.getLayers(),'orange')
 ZI_20C.addTo(map_3);
-console.log(ZI_20C);
+console.log(ZI_20C.toGeoJSON());
 	 
     PS.forEach(
     function(element) {
