--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);
   console.log(Test.toGeoJSON());
   console.log(turf.polygon(Test.toGeoJSON().geometry.coordinates));
- // console.log(turf.polygon(ZI_20C.toGeoJSON().geometry.coordinates));	
+  console.log(turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates));	
  //  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),ZI_20C.toGeoJSON()).addTo(map_3) ;
  //  console.log(poly);  
   Test.addTo(layer_cercles_CS);
