--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ layer_adresses_CS.eachLayer(function(layer) {
   console.log(Test.toGeoJSON());
   console.log(turf.polygon(Test.toGeoJSON().geometry.coordinates));
   console.log(turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates));	
- var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)).addTo(map_3) ;
+ var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
  console.log(poly);  
   Test.addTo(layer_cercles_CS);
 });
