--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@ ZI_20C.addTo(map_3);
 layer_adresses_CS.eachLayer(function(layer) {
   var Test = LGeo.circle(layer.getLatLng(), radius, opts);	
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
+ console.log(Test);
  console.log(poly);
 L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fill" : true}}).addTo(layer_cercles_CS);
 //  poly.addTo(layer_cercles_CS);
@@ -374,7 +375,7 @@ console.log(ZI_20C);
 	 // });
 // on crée la zone unique réunion des cercles pour faciliter le calcul des adresses en faisant partie
 // on prend la différence avec ces cercles et la zone d'influence de la 20ème Chaise
-var circleUnion = unify(layer_cercles_CS.getLayers(),'purple').addTo(map_3);
+var circleUnion = unify(layer_cercles_CS.getLayers().getLayers(),'purple').addTo(map_3);
 console.log(circleUnion.toGeoJSON());
 	 
 //var poly = turf.difference(layer_cercles_CS[0].toGeoJSON(),ZI_20C.toGeoJSON()).addTo(map_3) ;
