--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ L.geoJson(poly, {style: {"weight": 1.5, "color" : 'pink',  "opacity" : 0.8, "fil
 });
 
 console.log(Layer_ZI_20C.getLayers());
-console.log(layer_cercles_CS.getLayers());
+console.log(layer_cercles_CS.getLayers()._Layer);
 
 	
 
